[ADD] - Design + Coin working

--- a/src/public/game/style.css
+++ b/src/public/game/style.css
@@ -1,3 +1,11 @@
+:root {
+  --card__background-color: #262626;
+  --card__background-color-darken: #191919;
+  --card__background-color-hover: #353535;
+  --card__border-color: #2f2f2f;
+  --card__border-color-darken: #212121;
+}
+
 .game {
   width: calc(100% - 10em);
   margin-inline: auto;
@@ -7,5 +15,71 @@
 }
 
 .game__actions {
+  margin-top: 3em;
   display: flex;
+  gap: 0.5em;
+}
+
+.game__content {
+  margin-top: 1em;
+  padding: 0.5em;
+  border-radius: 0.3em;
+  border: 0.2em solid var(--card__border-color);
+  background-color: var(--card__background-color);
+}
+
+.slots {
+  margin-top: 0.3em;
+  display: flex;
+  gap: 0.4em;
+}
+
+.slot {
+  width: 1.5em;
+  height: 1.5em;
+  border-radius: 30em;
+}
+
+.slot__big {
+  width: 3em;
+  height: 3em;
+  border-top-width: 0.3em !important;
+  border-right-width: 0.3em !important;
+  border-bottom-width: 0.3em !important;
+  border-left-width: 0.3em !important;
+}
+
+.slot__button {
+  padding: 0.8em 1em;
+  border: 0.2em solid var(--card__border-color);
+  border-radius: 0.4em;
+  background-color: var(--card__background-color);
+  color: #fefefe;
+  cursor: pointer;
+  transition: 0.3s ease;
+}
+
+.slot__button:hover {
+  background-color: var(--card__background-color-hover);
+}
+
+.slot__button-disabled {
+  border: 0.2em solid var(--card__border-color-darken);
+  background-color: var(--card__background-color-darken) !important;
+  cursor: default;
+}
+
+.slot__empty {
+  background-color: #3c3c3c;
+  border: 0.15em solid #3c3c3c;
+}
+
+.slot__red {
+  border: 0.15em solid #ff7575;
+  background-color: #e53a3a;
+}
+
+.slot__yellow {
+  background-color: #eec724;
+  border: 0.15em solid #eed980;
 }
