--- a/src/public/style.css
+++ b/src/public/style.css
@@ -47,6 +47,7 @@
 
 .btn {
   padding: 0.8em 1em;
+  display: flex;
   border-radius: 0.4em;
   text-decoration: none;
   cursor: pointer;
@@ -54,7 +55,7 @@
 }
 
 a.btn {
-  padding: 0.5em 1em;
+  padding: 0.3em 1em;
 }
 
 .btn--black {
@@ -96,11 +97,21 @@ body {
   background-color: var(--body__black-background-color);
 }
 
-.game__menu {
-  margin-top: 8em;
-  padding: 1em 2em;
+.game__title {
   width: fit-content;
+  margin: 2em auto 1.5em auto;
+  font-size: 4rem;
+}
+
+.game__play {
+  width: fit-content;
+  margin: 3em auto 0 auto;
+}
+
+.game__menu {
   margin-inline: auto;
+  width: fit-content;
+  padding: 1em 2em;
   display: flex;
   flex-direction: column;
   align-items: center;
