--- a/src/public/game/style.css
+++ b/src/public/game/style.css
@@ -51,6 +51,8 @@
 
 #mouse__coin {
     position: absolute;
+    transition: transform 0.5s ease-out;
+    will-change: transform;
     z-index: 1;
 }
 
