--- a/src/public/game/style.css
+++ b/src/public/game/style.css
@@ -1,6 +1,7 @@
 /* Tiny leaderboard */
 .leaderboard {
     margin-top: 5em;
+    margin-left: 1em;
     width: fit-content;
     padding: 0.5em;
     position: fixed;
